# QMS

./: .env.example  .gitignore  AGENTS.md  AUTHENTICATION_ROUTING_FIX_REPORT.md  BACKEND_COMPLETION_SUMMARY.md  CI_CD_SUMMARY.md  CONTAINER_MONITORING_FINAL_REPORT.md  CONTAINER_STARTUP_DEBUG_COMPLETION_REPORT.md  DATABASE_INITIALIZATION_COMPLETE.md  DEPLOYMENT_SUCCESS_REPORT.md  EDMS_FRONTEND_INTEGRATION_COMPLETION_REPORT.md  EDMS_FRONTEND_INTEGRATION_PLAN.md  FASTAPI_HOST_VALIDATION_COMPLETE.md  FINAL_ISSUES_RESOLUTION_COMPLETE.md  FINAL_PROJECT_STATUS.md  GITHUB_SECRETS_SETUP_GUIDE.md  HOUSEKEEPING_PHASE_1_COMPLETE.md  HOUSEKEEPING_PHASE_2_COMPLETE.md  HOUSEKEEPING_PHASE_3_COMPLETE.md  HOUSEKEEPING_PLAN.md  HTTPS_ENDPOINT_TEST_RESULTS.md  NETWORK_CONFIGURATION_COMPLETE.md  NEXT_DEVELOPMENT_PHASE_RECOMMENDATIONS.md  NEXT_EPIC_PLAN.md  PERMISSION_SYSTEM_COMPLETE.md  PHASE_2_COMPLETE_SUCCESS.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_2_TESTING_STATUS.md  PHASE_2_VALIDATION_COMPLETE.md  PHASE_3_QRM_COMPLETE.md  PHASE_3_QRM_IMPLEMENTATION_PLAN.md  PHASE_4_IMPLEMENTATION_PLAN.md  PHASE_4_TRM_COMPLETE.md  PHASE_5_DATABASE_MIGRATION_STATUS.md  PHASE_5_INTEGRATION_TEST_REPORT.md  PHASE_5_PROGRESS_TRACKING.md  PHASE_5_SERVICE_LAYER_COMPLETE.md  PHASE_A_SPRINT_1_COMPLETION_SUMMARY.md  PHASE_A_SPRINT_1_IMPLEMENTATION_STATUS.md  PHASE_A_SPRINT_2_IMPLEMENTATION_PLAN.md  (+76 more)
backend/: Dockerfile  integration_test_results.json  pyproject.toml  requirements.txt  tmp_rovodev_integration_test.py  tmp_rovodev_uat_execution_results.json
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  audit.py  base.py  document_complete.py  document_workflow.py  edms.py  edms_old.py  qrm.py  system.py  training.py  training_integrated.py  training_simple.py  user.py
backend/app/models/organization_management/: __init__.py  department_hierarchy.py.disabled
backend/app/models/user_management/: __init__.py  user_profile.py
backend/app/schemas/: __init__.py  auth.py  edms.py  training_integrated.py  training_simple.py  user.py
backend/app/schemas/organization_management/: __init__.py  (+1 more)
backend/app/services/: __init__.py  audit_service.py  capa_service.py  document_service.py  document_storage_service.py  document_version_service.py  document_workflow_service.py  lims_service.py  quality_event_service.py  training_service.py  training_service_integrated.py
backend/app_backup/: .flake8  pytest.ini  requirements.txt
backend/app_backup/app/: main.py
backend/app_backup/tests/: __init__.py  test_system.py
backend/database/migrations/: 001_user_profile_enhancements.sql  002_department_organization_hierarchy.sql  003_analytics_foundation.sql  004_analytics_indexes.sql  005_analytics_sample_data.sql  006_report_templates.sql  007_business_calendar_tables.sql  008_predictive_scheduling_tables.sql
backend/qms_venv/: pyvenv.cfg
backend/tests/: conftest.py  test_auth.py  test_business_calendar.py  test_predictive_scheduling.py  test_users.py
backend/tests/compliance/: __init__.py
backend/tests/integration/: integration_test_runner.py
backend/tests/performance/: locustfile.py
(+292 files in other folders)
